cluster-infra/core/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-entrada
  namespace: dev
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    # ✂️ Ahora usamos /$1 para que la captura sea directa y limpia
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx 
  rules:
  - host: mi-flota.local
    http:
      paths:
      
      # 🚀 1. EL FRONTEND DE PODINFO (Regex simplificado)
      - path: /app/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: podinfo-app
            port:
              number: 9898

      # 💬 2. EL BACKEND DEL CHAT (Regex simplificado)
      - path: /chat/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: chat-app-svc
            port:
              number: 3000

      # 🌐 3. LANDING TRADICIONAL
      - path: /()(.*)
        pathType: Prefix
        backend:
          service:
            name: nginx-servicio
            port:
              number: 80
